2016-09-20  Carl Hetherington  <cth@carlh.net>

	* Give better errors on SubRip parse failures.

	* Version 2.9.23 released.

2016-09-20  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.22 released.

2016-09-13  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.21 released.

2016-09-07  Carl Hetherington  <cth@carlh.net>

	* Updated es_ES translation from Manuel AC.

2016-08-30  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.20 released.

2016-08-30  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

2016-08-29  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.19 released.

2016-08-28  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

	* Version 2.9.18 released.

2016-08-28  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2016-08-27  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

	* Updated zh_CN translation from 刘汉源.


2016-08-26  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.17 released.

2016-08-25  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.16 released.

2016-08-25  c.hetherington  <cth@carlh.net>

	* Fix silent acceptance of certificate chains where
	single certificates are required (#937).

2016-08-25  Carl Hetherington  <cth@carlh.net>

	* Make burnt-in subtitle outline width configurable (#940).

	* Updated nl_NL translation from Rob van Nieuwkerk.

2016-08-24  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

	* Updated cs_CZ translation from Tomáš Begeni.

2016-08-24  c.hetherington  <cth@carlh.net>

	* Allow import of OV/VF DCPs (#906).

2016-08-24  Carl Hetherington  <cth@carlh.net>

	* Keep timeline above main window.

2016-08-22  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.15 released.

2016-08-22  c.hetherington  <cth@carlh.net>

	* Fix doubled-up subtitles in some cases when importing
	DCPs with subtitles.
